﻿4.0.9 (2019-XX-XX)
------------------

Bug fixes
 - [eas] improve FolderSync operation (#4672)

4.0.5 (2018-MM-DD)
------------------

Bug fixes
 - [eas] strip '<>' from bodyId and when forwarding mails
 - [eas] fix search on for Outlook application (#4605 and #4607)
 - [eas] better handle bogus DTStart values
 - [eas] support for basic UserInformation queries (#4614)
 - [eas] better handle timezone changes (#4624)

4.0.1 (2018-07-10)
------------------
Bug fixes
 - [web] prevent deletion of special folders using del key
 - [eas] improved alarms syncing with EAS devices (#4351)
 - [eas] avoid potential cache update when breaking sync queries (#4422)
 - [eas] fixed EAS search

New features
 - [core] full S/MIME support
 - [core] can now invite attendees to exceptions only (#2561)
 - [core] add support for module constraints in SQL sources
 - [core] add support for listRequiresDot in SQL sources
 - [web] add support for SearchFieldNames in SQL sources
 - [web] display freebusy information of owner in appointment editor
 - [web] register SOGo as a handler for the mailto scheme (#1223)
 - [web] new events list view where events are grouped by day
 - [web] user setting to always show mail editor inside current window or in popup window
 - [web] add support for events with recurrence dates (RDATE)

Enhancements
 - [web] follow requested URL after user authentication
 - [web] added Simplified Chinese (zh_CN) translation - thanks to Thomas Kuiper
 - [web] now also give modify permission when selecting all calendar rights
 - [web] allow edition of IMAP flags associated to mail labels
 - [web] search scope of address book is now respected
 - [web] avoid redirection to forbidden module (via ModulesConstraints)
 - [web] lower constraints on dates range of auto-reply message (#4161)
 - [web] sort categories in event and task editors (#4349)
 - [web] show weekday in headers of day view
 - [web] improve display of overlapping events with categories