@@ -3,6 +3,7 @@
 
 Bug fixes
  - [eas] improve FolderSync operation (#4672)
+ - [eas] avoid incorrect truncation leading to exception (#4806)
 
 4.0.5 (2018-MM-DD)
 ------------------
